--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="./app/app.js"></script>
 		<script type="text/javascript">
 		document.addEventListener("DOMContentLoaded", function(event) {
-			App.init();		
+			app.init();
 		});			
 		</script>
 		
